# pyol

./: .gitignore  README.md  setup.cfg
src/pyol/: __init__.py  exceptions.py  gid.py
src/pyol/core/: exceptions.py  gid.py
src/pyol/lib/: aio.py  msg.py
src/pyol/p3/: __init__.py  packet.py
tests/: test_gid.py  test_p3.py
tests/lib/: test_aio.py  test_msg.py
