[metadata]
name = PyOL
version = 0.1
author = Dr. Deceptio
author_email = drdeceptio@proton.me
description = Python library for communicating with P3OL
long_description = file: README.md
long_descrption_content_type = text/md
url = https://github.com/drdeceptio/pyol
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
puthon_requires = >= 3.10

[options.packages.find]
where = src
